[package]
name = "flashot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
ethabi = "18.0.0"
ethers = "2.0.14"
sha3 = "0.10.8"
anyhow = "1.0.87"
